Fix checklist item alignments and step edit alignment [SCI-6961]

--- a/app/assets/stylesheets/steps/step.scss
+++ b/app/assets/stylesheets/steps/step.scss
@@ -259,6 +259,7 @@
     margin-left: auto;
     position: absolute;
     right: 0;
+    top: 0;
 
     .fas {
       font-size: 14px;
